test_files/fails/s_function_reference_in_delay.ar
let rec foo = \x ->
    let f = \y -> y in
    x :: delay (foo (f (adv (wait second))));

console <- foo 0;
